Role interface, translations

--- a/src/translations/hr.json
+++ b/src/translations/hr.json
@@ -11,5 +11,15 @@
   "Enter Password" : "Unesi lozinku",
   "Submit" : "Pošalji",
   "Repeat Password" : "Ponovi lozinku",
-  "Enter Password Again" : "Ponovo unesi lozinku"
+  "Enter Password Again" : "Ponovo unesi lozinku",
+    "Roles" : "Role",
+    "Search..." : "Traži...",
+    "Add New Role" : "Dodaj novu rolu",
+    "Title" : "Naziv",
+    "Description" : "Opis",
+    "Actions" : "Akcije",
+    "Enter Description" : "Unesi opis",
+    "Add New User" : "Dodaj novog korisnika",
+    "Edit" : "Uredi",
+    "Delete" : "Obriši"
 }
