--- a/src/translations/hr.json
+++ b/src/translations/hr.json
@@ -21,5 +21,7 @@
     "Enter Description" : "Unesi opis",
     "Add New User" : "Dodaj novog korisnika",
     "Edit" : "Uredi",
-    "Delete" : "Obriši"
+    "Delete" : "Obriši",
+    "Log Out" : "Odjavi se",
+    "My account" "Moji podaci"
 }
