Admin section in main menu

--- a/src/translations/hr.json
+++ b/src/translations/hr.json
@@ -23,5 +23,6 @@
     "Edit" : "Uredi",
     "Delete" : "Obriši",
     "Log Out" : "Odjavi se",
-    "My account" "Moji podaci"
+    "My account" : "Moji podaci",
+    "Administration" : "Administracija"
 }
