--- a/src/translations/hr.json
+++ b/src/translations/hr.json
@@ -24,5 +24,6 @@
     "Delete" : "Obriši",
     "Log Out" : "Odjavi se",
     "My account" : "Moji podaci",
-    "Administration" : "Administracija"
+    "Administration" : "Administracija",
+    "User Roles" : "Korisnikove role"
 }
