New department styling

--- a/src/translations/hr.json
+++ b/src/translations/hr.json
@@ -25,5 +25,6 @@
     "Log Out" : "Odjavi se",
     "My account" : "Moji podaci",
     "Administration" : "Administracija",
-    "User Roles" : "Korisnikove role"
+    "User Roles" : "Korisnikove role",
+    "New department" : "Novo odjeljenje"
 }
