Profile page styling

--- a/src/translations/hr.json
+++ b/src/translations/hr.json
@@ -26,5 +26,7 @@
     "My account" : "Moji podaci",
     "Administration" : "Administracija",
     "User Roles" : "Korisnikove role",
-    "New department" : "Novo odjeljenje"
+    "New department" : "Novo odjeljenje",
+    "Basic info" : "Osnovni podaci",
+    "Office Location" : "Lokacija ureda"
 }
