--- a/src/translations/hr.json
+++ b/src/translations/hr.json
@@ -28,5 +28,18 @@
     "User Roles" : "Korisnikove role",
     "New department" : "Novo odjeljenje",
     "Basic info" : "Osnovni podaci",
-    "Office Location" : "Lokacija ureda"
+    "Office Location" : "Lokacija ureda",
+    "datepicker" : {
+        "monthsFull": ["Siječanj", "Veljača", "Ožujak", "Travanj", "Svibanj", "Lipanj", "Srpanj", "Kolovoz", "Rujan", "Listopad", "Studeni", "Prosinac"],
+        "monthsShort": ["Sij", "Velj", "Ožu", "Tra", "Svi", "Lip", "Srp", "Kol", "Ruj", "Lis", "Stu", "Pro"],
+        "weekdaysFull": ["Nedjelja", "Ponedjeljak", "Utorak", "Srijeda", "Četvrtak", "Petak", "Subota"],
+        "weekdaysShort": ["Ned", "Pon", "Uto", "Sri", "Čet", "Pet", "Sub"],
+        "today": "Danas",
+        "clear": "Očisti",
+        "close": "Zatvori",
+        "labelMonthNext": "Sljedeći mjesec",
+        "labelMonthPrev": "Prethodni mjesec",
+        "labelMonthSelect": "Odaberi mjesec",
+        "labelYearSelect": "Odaberi godinu",
+    }
 }
