--- a/src/translations/hr.json
+++ b/src/translations/hr.json
@@ -41,5 +41,179 @@
         "labelMonthPrev": "Prethodni mjesec",
         "labelMonthSelect": "Odaberi mjesec",
         "labelYearSelect": "Odaberi godinu",
-    }
+    },
+    "Starting Date": "Datum izrade",
+    "Total Time": "Ukupno vrijeme",
+    "Assigner": "Odgovorna osoba",
+    "Project data": "Podaci o projektu",
+    "Project name": "Naziv projekta",
+    "Project number": "Broj projekta",
+    "Additional project number": "Dodatni broj projekta",
+    "Note": "Napomena",
+    "Start": "Početna",
+    "Basic Data": "Osnovni podaci",
+    "Categorization": "Kategorizacija",
+    "Market Potential": "marketinški potencijal",
+    "Technical Data": "Tehnički podaci",
+    "Print": "Tisak",
+    "Authors Expense": "Autorski troškovi",
+    "Production Expense": "Produkcijski troškovi",
+    "Distribution Expense": "Distribucijski troškovi",
+    "Layout Expense": "Trošak prijeloma",
+    "Deadline": "Rok",
+    "Calculation": "Kalkulacija",
+    "Text Preparation": "Priprema teksta",
+    "Translation": "Prijevod",
+    "Technical Preparation": "Tehnička piprema",
+    "Proofreading": "Redaktura",
+    "Additional Materials": "Dodatni materijali",
+    "Reviews": "Recenzije",
+    "Lecture": "Lektura",
+    "Technical Correction": "Tehnička korektura",
+    "Final Review": "Završna korektura",
+    "Expenses": "Troškovi",
+    "Expense": "Trošak",
+    "Compare": "Usporedba",
+    "Design": "Dizajn",
+    "Cover Design": "Dizajn naslovnice",
+    "Layout Design": "Dizajn knj. bloka",
+    "Layout": "Layout",
+    "First Block Layout": "Prijelom I. bloka",
+    "Cover": "Naslovnica",
+    "First Revision": "Prva revizija",
+    "Correction": "Korektura",
+    "Correction input": "Unos korekture",
+    "Revisions": "Revizije",
+    "Final Price": "Konačna cijena",
+    "Price Definition": "Određivanje cijene",
+    "Prepress": "Priprema",
+    "Print Proof": "Probni otisci",
+    "Print Proof Correction": "Ispravak probnih otisaka",
+    "Print": "Tisak",
+    "Warehouse": "Skladište",
+    "Additionals": "Dodaci",
+    "Multimedia": "Multimedija",
+    "Marketing": "Marketing",
+    "Author": "Autor",
+    "Add New Author": "Dodaj novog autora",
+    "Concept": "Koncept",
+    "Manuscript": "Rukopis",
+    "Ordered": "Naručen",
+    "Delivered": "Dostavljen",
+    "Add Documents": "Dodaj dokument",
+    "Dotation": "Dotacija",
+    "Yes": "Da",
+    "Ne": "Ne",
+    "Possible Products": "Dodatne mogućnosti",
+    "E-book": "E-knjiga",
+    "Website": "Internet stranica",
+    "App": "Mobilna aplikacija",
+    "Additional Language": "Dodatni jezik",
+    "Short Edition": "Skraćeno izdanje",
+    "Assign to...": "Zaduži...",
+    "Save": "Spremi",
+    "Basic Categorization": "Osnovna kategorizacija",
+    "Supergroup": "Supergrupa",
+    "Upgroup": "Nadgrupa",
+    "Group": "Grupa",
+    "Book Type": "Vrsta knjige",
+    "Main Group": "Osnovna grupa",
+    "Group": "Grupa",
+    "School": "Škola",
+    "School Type": "Tip škole",
+    "Class in Elementary": "OŠ razred",
+    "Class in High School": "SŠ razred",
+    "Subjects": "Područja",
+    "Field": "Područje",
+    "Field Detailed": "Specifično područje",
+    "Bibliography": "Biblioteka",
+    "Main Target": "Ciljna skupina",
+    "Documents": "Dokumenti",
+    "Circulation": "Naklade",
+    "Additions": "Dodaci",
+    "Book Block": "Knjižni blok",
+    "Number of Pages": "Broj stranica",
+    "Width": "Širina",
+    "Height": "Visina",
+    "Book Binding": "Vrsta uveza",
+    "Hard Book Binding": "Tvrdi uvez",
+    "Soft Book Binding": "Meki uvez",
+    "Spiral Book Binding": "Spiralni uvez",
+    "Paper Type": "Vrsta papira",
+    "Colors": "Boje",
+    "Choose Colors": "Odaberi broj boja",
+    "One Color": "Jedna boja",
+    "Two Colors": "Dvije boja",
+    "Three Colors": "Dvije boja",
+    "Full Color": "Full kolor",
+    "Fifth Color": "Peta boja",
+    "Colors - First pages": "Boje - prve stranice",
+    "Colors - last pages": "Boje - zadnje stranice",
+    "Additional Work": "Dodatni zahtjevi",
+    "Hard/Soft cover": "Tvrdi/meki uvez",
+    "None": "Ništa",
+    "Hard Cover": "Tvrdi uvez",
+    "Soft Cover": "Meki uvez",
+    "Hard and Soft Cover": "Tvrdi i meki uvez",
+    "Plastification": "Plastifikacija",
+    "Glossy plastification": "Sjajna plastifikacija",
+    "Mat plastification": "Mat plastifikacija",
+    "Film print": "Film print",
+    "Blind print": "Slijepi tisak",
+    "UV Film": "UV plastifikacija",
+    "Print Offers": "Ponuda tiska",
+    "Download as...": "Preuzmi kao...",
+    "Amount": "Iznos",
+    "Accontation": "Akontacija",
+    "Add New Expense": "Dodaj novi trošak",
+    "Add New Author Expense": "Dodaj novi trošak autora",
+    "Text price": "Cijena kartice teksta",
+    "Netto Price Percentage": "Postotak neto cijene",
+    "Reviews": "Recenzije",
+    "Lecture": "Lektura",
+    "Correction": "Korektura",
+    "Proofreading": "Redaktura",
+    "Translation": "Prijevod",
+    "Index": "Indeks",
+    "Epilogue": "Epilog",
+    "Photos": "Fotografije",
+    "illustrations": "Ilustracije",
+    "Technical Drawings": "Tehnički crteži",
+    "Expert Report": "Recenzija eksperta",
+    "Copyright": "Copyright",
+    "Copyright Mediator": "Copyright posrednik",
+    "Methodical Instrumentarium": "Metodički dodaci",
+    "Selection": "Odabir",
+    "Powerpoint Presentation": "Powerpoint prezentacija",
+    "Aditional Expenses": "Dodatni troškovi",
+    "Distribution Margin": "Distribucijski trošak",
+    "Design Expense": "Trošak dizajna",
+    "Layout Complexity": "Kompleksnost prijeloma",
+    "Desing Complexity": "Zahtjevnost dizajna",
+    "Select Date": "Odabir datuma",
+    "Priority": "Prioritetna važnost",
+    "High": "Visoka",
+    "Medium": "Srednja",
+    "Low": "Niska",
+    "Total Cost": "Ukupni trošak",
+    "Direct Cost Cover": "Pokrivanje direktnih troškova",
+    "Complete Cost Cover": "Potpuno pokivanje troškova",
+    "Number of Sold Copies": "Broj prodanih primjeraka",
+    "Price Proposal": "Prijedlog cijene",
+    "Initial Document": "Početni dokument",
+    "Final Document": "Završni dokument",
+    "Upload": "Pošalji datoteku",
+    "Done": "Gotovo",
+    "Layout and Design": "Prijelom i dizajn",
+    "Budget vs. Expenses": "Početni i stvarni troškovi",
+    "Budget": "Budžet (početni troškovi)",
+    "Expenses": "Troškovi",
+    "Difference": "Razlika",
+    "Difference in Precentage": "Razlika u postotku",
+    "Item": "Naziv",
+    "Expense Total": "Ukupni trošak",
+    "Cost Approval": "Autorizacija troška",
+    "Send on Approval": "Pošalji na autorizaciju",
+    "Recieved in Warehouse": "Primljeno na skladište"
+ 
 }
