Style update, Wellcome page

--- a/src/translations/hr.json
+++ b/src/translations/hr.json
@@ -214,6 +214,7 @@
     "Expense Total": "Ukupni trošak",
     "Cost Approval": "Autorizacija troška",
     "Send on Approval": "Pošalji na autorizaciju",
-    "Recieved in Warehouse": "Primljeno na skladište"
+    "Recieved in Warehouse": "Primljeno na skladište",
+    "New Editions": "Nova izdanja"
  
 }
