Fix typography Fix translations

--- a/src/translations/hr.json
+++ b/src/translations/hr.json
@@ -3,6 +3,10 @@
   "Employees" : "Zaposlenici",
   "Candidates" : "Kandidati",
   "Proposition" : "Propozicija",
+  "Propositions" : "Propozicije",
+  "Books" : "Knjige",
+  "Notifications" : "Obavijesti",
+  "Messages" : "Poruke",
   "Email Address" : "Email adresa",
   "Enter Email" : "Unesi Email",
   "Name" : "Ime",
@@ -40,7 +44,7 @@
         "labelMonthNext": "Sljedeći mjesec",
         "labelMonthPrev": "Prethodni mjesec",
         "labelMonthSelect": "Odaberi mjesec",
-        "labelYearSelect": "Odaberi godinu",
+        "labelYearSelect": "Odaberi godinu"
     },
     "Starting Date": "Datum izrade",
     "Total Time": "Ukupno vrijeme",
@@ -63,15 +67,10 @@
     "Deadline": "Rok",
     "Calculation": "Kalkulacija",
     "Text Preparation": "Priprema teksta",
-    "Translation": "Prijevod",
     "Technical Preparation": "Tehnička piprema",
-    "Proofreading": "Redaktura",
     "Additional Materials": "Dodatni materijali",
-    "Reviews": "Recenzije",
-    "Lecture": "Lektura",
     "Technical Correction": "Tehnička korektura",
     "Final Review": "Završna korektura",
-    "Expenses": "Troškovi",
     "Expense": "Trošak",
     "Compare": "Usporedba",
     "Design": "Dizajn",
@@ -81,7 +80,6 @@
     "First Block Layout": "Prijelom I. bloka",
     "Cover": "Naslovnica",
     "First Revision": "Prva revizija",
-    "Correction": "Korektura",
     "Correction input": "Unos korekture",
     "Revisions": "Revizije",
     "Final Price": "Konačna cijena",
@@ -89,7 +87,6 @@
     "Prepress": "Priprema",
     "Print Proof": "Probni otisci",
     "Print Proof Correction": "Ispravak probnih otisaka",
-    "Print": "Tisak",
     "Warehouse": "Skladište",
     "Additionals": "Dodaci",
     "Multimedia": "Multimedija",
@@ -115,7 +112,6 @@
     "Basic Categorization": "Osnovna kategorizacija",
     "Supergroup": "Supergrupa",
     "Upgroup": "Nadgrupa",
-    "Group": "Grupa",
     "Book Type": "Vrsta knjige",
     "Main Group": "Osnovna grupa",
     "Group": "Grupa",
@@ -216,5 +212,4 @@
     "Send on Approval": "Pošalji na autorizaciju",
     "Recieved in Warehouse": "Primljeno na skladište",
     "New Editions": "Nova izdanja"
- 
 }
