Approve higer cost

--- a/src/translations/hr.json
+++ b/src/translations/hr.json
@@ -3,10 +3,6 @@
   "Employees" : "Zaposlenici",
   "Candidates" : "Kandidati",
   "Proposition" : "Propozicija",
-  "Propositions" : "Propozicije",
-  "Books" : "Knjige",
-  "Notifications" : "Obavijesti",
-  "Messages" : "Poruke",
   "Email Address" : "Email adresa",
   "Enter Email" : "Unesi Email",
   "Name" : "Ime",
@@ -67,10 +63,15 @@
     "Deadline": "Rok",
     "Calculation": "Kalkulacija",
     "Text Preparation": "Priprema teksta",
-    "Technical Preparation": "Tehnička piprema",
+    "Translation": "Prijevod",
+    "Technical Preparation": "Tehnička priprema",
+    "Proofreading": "Redaktura",
     "Additional Materials": "Dodatni materijali",
+    "Reviews": "Recenzije",
+    "Lecture": "Lektura",
     "Technical Correction": "Tehnička korektura",
     "Final Review": "Završna korektura",
+    "Expenses": "Troškovi",
     "Expense": "Trošak",
     "Compare": "Usporedba",
     "Design": "Dizajn",
@@ -80,6 +81,7 @@
     "First Block Layout": "Prijelom I. bloka",
     "Cover": "Naslovnica",
     "First Revision": "Prva revizija",
+    "Correction": "Korektura",
     "Correction input": "Unos korekture",
     "Revisions": "Revizije",
     "Final Price": "Konačna cijena",
@@ -87,10 +89,12 @@
     "Prepress": "Priprema",
     "Print Proof": "Probni otisci",
     "Print Proof Correction": "Ispravak probnih otisaka",
+    "Print": "Tisak",
     "Warehouse": "Skladište",
     "Additionals": "Dodaci",
     "Multimedia": "Multimedija",
     "Marketing": "Marketing",
+    "Marketing Expense": "Marketinški trošak",
     "Author": "Autor",
     "Add New Author": "Dodaj novog autora",
     "Concept": "Koncept",
@@ -112,11 +116,12 @@
     "Basic Categorization": "Osnovna kategorizacija",
     "Supergroup": "Supergrupa",
     "Upgroup": "Nadgrupa",
+    "Group": "Grupa",
     "Book Type": "Vrsta knjige",
     "Main Group": "Osnovna grupa",
     "Group": "Grupa",
     "School": "Škola",
-    "School Type": "Tip škole",
+    "School type": "Tip škole",
     "Class in Elementary": "OŠ razred",
     "Class in High School": "SŠ razred",
     "Subjects": "Područja",
@@ -138,15 +143,15 @@
     "Paper Type": "Vrsta papira",
     "Colors": "Boje",
     "Choose Colors": "Odaberi broj boja",
-    "One Color": "Jedna boja",
-    "Two Colors": "Dvije boja",
-    "Three Colors": "Dvije boja",
-    "Full Color": "Full kolor",
-    "Fifth Color": "Peta boja",
-    "Colors - First pages": "Boje - prve stranice",
-    "Colors - last pages": "Boje - zadnje stranice",
+    "One Colour": "Jedna boja",
+    "Two Colours": "Dvije boja",
+    "Three Colours": "Dvije boja",
+    "Full Colour": "Full kolor",
+    "Fifth Colour": "Peta boja",
+    "Colors - First Pages": "Boje - prve stranice",
+    "Colors - Last Pages": "Boje - zadnje stranice",
     "Additional Work": "Dodatni zahtjevi",
-    "Hard/Soft cover": "Tvrdi/meki uvez",
+    "Hard/Soft Cover": "Tvrdi/meki uvez",
     "None": "Ništa",
     "Hard Cover": "Tvrdi uvez",
     "Soft Cover": "Meki uvez",
@@ -163,7 +168,7 @@
     "Accontation": "Akontacija",
     "Add New Expense": "Dodaj novi trošak",
     "Add New Author Expense": "Dodaj novi trošak autora",
-    "Text price": "Cijena kartice teksta",
+    "Text Price": "Cijena kartice teksta",
     "Netto Price Percentage": "Postotak neto cijene",
     "Reviews": "Recenzije",
     "Lecture": "Lektura",
@@ -173,19 +178,19 @@
     "Index": "Indeks",
     "Epilogue": "Epilog",
     "Photos": "Fotografije",
-    "illustrations": "Ilustracije",
+    "Illustrations": "Ilustracije",
     "Technical Drawings": "Tehnički crteži",
     "Expert Report": "Recenzija eksperta",
     "Copyright": "Copyright",
     "Copyright Mediator": "Copyright posrednik",
     "Methodical Instrumentarium": "Metodički dodaci",
     "Selection": "Odabir",
-    "Powerpoint Presentation": "Powerpoint prezentacija",
+    "PowerPoint Presentation": "PowerPoint prezentacija",
     "Aditional Expenses": "Dodatni troškovi",
     "Distribution Margin": "Distribucijski trošak",
     "Design Expense": "Trošak dizajna",
     "Layout Complexity": "Kompleksnost prijeloma",
-    "Desing Complexity": "Zahtjevnost dizajna",
+    "Design Complexity": "Zahtjevnost dizajna",
     "Select Date": "Odabir datuma",
     "Priority": "Prioritetna važnost",
     "High": "Visoka",
@@ -198,7 +203,7 @@
     "Price Proposal": "Prijedlog cijene",
     "Initial Document": "Početni dokument",
     "Final Document": "Završni dokument",
-    "Upload": "Pošalji datoteku",
+    "Upload": "Unesi datoteku",
     "Done": "Gotovo",
     "Layout and Design": "Prijelom i dizajn",
     "Budget vs. Expenses": "Početni i stvarni troškovi",
@@ -209,7 +214,88 @@
     "Item": "Naziv",
     "Expense Total": "Ukupni trošak",
     "Cost Approval": "Autorizacija troška",
-    "Send on Approval": "Pošalji na autorizaciju",
+    "Send for Approval": "Pošalji na autorizaciju",
     "Recieved in Warehouse": "Primljeno na skladište",
-    "New Editions": "Nova izdanja"
+    "New Project": "Novi projekt",
+    "Task Sent": "Zadatak poslan",
+    "Publishing Director": "Direktor izdavaštva",
+    "Waiting time": "Vrijeme čekanja",
+    "Close": "Zatvori",
+    "Add Files": "Unesi datoteku",
+    "Upload documents using upload button, or use drag and drop": "Unesi datoteku pomoću gumba ili putem drag&drop polja",
+    "Dotation Origin": "Izvor dotacije",
+    "Choose Category": "Odaberi",
+    "Other Expenses": "Ostali troškovi",
+    "Total": "Ukupno",
+    "Marketing Budget": "Marketinški budžet",
+    "Distribution": "Distribucija",
+    "Choose": "Odaberi",
+    "1 - Very Easy": "1 - vrlo jednostavno",
+    "2 - Easy": "2 - jednostavno",
+    "3 - Medium": "3 - osrednje",
+    "4 - Demanding": "4 - zahtjevno",
+    "5 - Very Demanding": "5 - iznimno zahtjevno",
+    "Tehnical Drawings": "Tehnički crteži",
+    "Category": "kategorija",
+    "Desired Publishing Date": "Željeni datum završetka projekta",
+    "Precalculation": "Predkalkulacija",
+    "0-12 Months": "Prva godina",
+    "12-24 Months": "Druga godina",
+    "Retail": "maloprodaja",
+    "Wholesale": "Veleprodaja",
+    "Field Sales": "Terenska prodaja",
+    "Direct Sales": "Direktna prodaja",
+    "Promotors": "Promotori",
+    "Export": "Izvoz",
+    "Retail Price": "Maloprodajna cijena",
+    "Webshop Description": "Opis za webshop",
+    "Cover - JPG format": "Naslovnica - JPG format",
+    "Cover - PSD format": "Naslovnica - PSD format",
+    "Cover - PDF format": "Naslovnica - PDF format",
+    "Leaflet": "Letak",
+    "Show All": "Prikaži sve",
+    "Notifications": "Obavijesti",
+    "Messages": "Poruke",
+    "Waiting Approval": "Vrijeme čekanja",
+    "Creation Date": "Vrijeme izrade",
+    "Current Status": "Trenutni status",
+    "Rejected": "Odbijeno",
+    "Show More": "Prikaži više",
+    "Active Propositions": "Aktivne propozicije",
+    "Propositions On Approval": "Propozicije na odobrenju",
+    "Unfinished Propositions": "Nedovršene propozicije",
+    "Rejected Propositions": "odbijene propozicije",
+    "Deleted Propositions": "Izbrisane propozicije",
+    "Proposition Archive": "Arhiv propozicija",
+    "Completition Date": "Datum završetka",
+    "Create new": "Dodaj novu",
+    "Add new": "Dodaj novu",
+    "Propositions": "Propozicije",
+    "Users": "Korisnici",
+    "Add User": "Dodaj korisnika",
+    "Add Role": "Dodaj rolu",
+    "Role": "Role",
+    "Departments": "Odjeljenja",
+    "Books": "Izdanja",
+    "Authors": "Autori",
+    "Tasks": "Zadaci",
+    "New Message": "Nova poruka",
+    "Task Management": "Zadaci",
+    "Completion Date": "Datum završetka",
+    "Send on Approval": "Pošalji na odobrenje",
+    "New Editions": "Nova izdanja",
+    "Layout and Design budget": "Layout i dizajn trošak",
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+     
 }
