Approval expense modal fix; Mobile table view fix

--- a/src/translations/hr.json
+++ b/src/translations/hr.json
@@ -285,6 +285,10 @@
     "Send on Approval": "Pošalji na odobrenje",
     "New Editions": "Nova izdanja",
     "Layout and Design budget": "Layout i dizajn trošak",
+    "Task Type": "Vrsta zadatka",
+    "Created": "Kreiran",
+    "Assign employee": "Zaduži osobu",
+    "Cost Approve": "Odobravanje troška"
     
     
     
