--- a/src/translations/hr.json
+++ b/src/translations/hr.json
@@ -164,7 +164,8 @@
     "UV Film": "UV plastifikacija",
     "Print Offers": "Ponuda tiska",
     "Download as...": "Preuzmi kao...",
-    "Amount": "Iznos",
+    "Amount": "Količina",
+    "Text Price": "Cijena kartice teksta",
     "Accontation": "Akontacija",
     "Add New Expense": "Dodaj novi trošak",
     "Add New Author Expense": "Dodaj novi trošak autora",
@@ -198,7 +199,7 @@
     "Low": "Niska",
     "Total Cost": "Ukupni trošak",
     "Direct Cost Cover": "Pokrivanje direktnih troškova",
-    "Complete Cost Cover": "Potpuno pokivanje troškova",
+    "Complete Cost Cover": "Pokrivanje svih troškova",
     "Number of Sold Copies": "Broj prodanih primjeraka",
     "Price Proposal": "Prijedlog cijene",
     "Initial Document": "Početni dokument",
@@ -288,7 +289,12 @@
     "Task Type": "Vrsta zadatka",
     "Created": "Kreiran",
     "Assign employee": "Zaduži osobu",
-    "Cost Approve": "Odobravanje troška"
+    "Cost Approve": "Odobravanje troška",
+    "Upload Files": "Prijenos datoteke",
+    "Delete Expense": "Izbrši trošak",
+    "Additional Expenses": "Dodatni troškovi"
+    
+    
     
     
     
