--- a/src/translations/hr.json
+++ b/src/translations/hr.json
@@ -44,7 +44,7 @@
     },
     "Starting Date": "Datum izrade",
     "Total Time": "Ukupno vrijeme",
-    "Assigner": "Odgovorna osoba",
+    "Assigner": "Zadatak kreirao",
     "Project data": "Podaci o projektu",
     "Project name": "Naziv projekta",
     "Project number": "Broj projekta",
@@ -152,10 +152,14 @@
     "Colors - Last Pages": "Boje - zadnje stranice",
     "Additional Work": "Dodatni zahtjevi",
     "Hard/Soft Cover": "Tvrdi/meki uvez",
+    "Book binding": "Povezivanje stranica",
     "None": "Ništa",
     "Hard Cover": "Tvrdi uvez",
     "Soft Cover": "Meki uvez",
     "Hard and Soft Cover": "Tvrdi i meki uvez",
+    "Hard book binding": "Tvrdo povezivanje",
+    "Soft book binding": "Meko povezivanje",
+    "Spiral book binding": "Spirala",
     "Plastification": "Plastifikacija",
     "Glossy plastification": "Sjajna plastifikacija",
     "Mat plastification": "Mat plastifikacija",
@@ -164,7 +168,7 @@
     "UV Film": "UV plastifikacija",
     "Print Offers": "Ponuda tiska",
     "Download as...": "Preuzmi kao...",
-    "Amount": "Količina",
+    "Amount": "Iznos",
     "Text Price": "Cijena kartice teksta",
     "Accontation": "Akontacija",
     "Add New Expense": "Dodaj novi trošak",
@@ -277,6 +281,8 @@
     "Add Role": "Dodaj rolu",
     "Role": "Role",
     "Departments": "Odjeljenja",
+    "Department": "Odjeljenje",
+    "Employee": "Osoba",
     "Books": "Izdanja",
     "Authors": "Autori",
     "Tasks": "Zadaci",
@@ -292,7 +298,33 @@
     "Cost Approve": "Odobravanje troška",
     "Upload Files": "Prijenos datoteke",
     "Delete Expense": "Izbrši trošak",
-    "Additional Expenses": "Dodatni troškovi"
+    "Additional Expenses": "Dodatni troškovi",
+    "Task Description": "Opis zadatka",
+    "Access Level": "Razina ovlasti",
+    "All Proposition Pages": "Cijela propozicija",
+    "Only This Page": "Samo ova stranica propozicije",
+    "Cancel": "Otkaži",
+    "Assign": "Zaduži",
+    "Soft Cover Circulation": "Naklada mekog uveza",
+    "Hard Cover Circulation": "naklada tvrdog uveza",
+    "Percentage": "Postotak",
+    "Delete Expense": "Izbriši trošak",
+    "Expense Name": "Naziv troška",
+    "Quantity": "Količina",
+    "Actions": "Uređivanje",
+    "Upload New Image": "Ubaci novu fotografiju",
+    "Edit User": "Uredi podatke",
+    "New Task": "Novi zadatak",
+    "Task": "Zadatak",
+    "Assign Person": "Zaduži osobu",
+    "Assign Department": "Zaduži odijeljenje",
+    "Task Completition Time": "Vremenska procjena dovršetka zadatka",
+    "Hours": "Sati",
+    "Minutes": "Minuta",
+    "Assign to": "Zadužena osoba",
+    "Accept": "Prihvaćam",
+    "Reject": "Odbijam",
+    "Deadline / Priority": "Rok / Razina prioriteta"
     
     
     
