Cost approval icon/text fix

--- a/src/translations/hr.json
+++ b/src/translations/hr.json
@@ -329,7 +329,8 @@
     "Proposition Creator": "Kreirao propoziciju",
     "Find employee": "Pronađi osobu",
     "Cost Rejected": "Trošak odbijen",
-    "Cost Approved": "Trošak odobren"
+    "Cost Approved": "Trošak odobren",
+    "Cost Approval Pending": "Trošak je na odobrenju"
     
     
     
