Sent Tasks finished status

--- a/src/translations/hr.json
+++ b/src/translations/hr.json
@@ -330,7 +330,8 @@
     "Find employee": "Pronađi osobu",
     "Cost Rejected": "Trošak odbijen",
     "Cost Approved": "Trošak odobren",
-    "Cost Approval Pending": "Trošak je na odobrenju"
+    "Cost Approval Pending": "Trošak je na odobrenju",
+    "Finished": "Dovršeno"
     
     
     
