Stopwatch style fix

--- a/src/translations/hr.json
+++ b/src/translations/hr.json
@@ -342,7 +342,8 @@
     "New Tasks": "Novi zadatak",
     "Sent Tasks": "Poslani zadaci",
     "Completed Tasks": "Završeni zadaci",
-    "Rejected Tasks": "Odbijeni zadaci"
+    "Rejected Tasks": "Odbijeni zadaci",
+    "Working Time": "Vrijeme na zadatku"
     
     
     
