Add translation to toastr notifications. TODO: translate to english and add them to translation array

--- a/src/translations/hr.json
+++ b/src/translations/hr.json
@@ -371,23 +371,6 @@
     "Add Additional Information": "Unesi dodatne informacije",
     "Formal title": "Titula",
     "Working in": "Trenutno zaposlenje",
-    "Assign department or directly employee": "Zaduži odjeljenje ili osobu"
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-     
+    "Assign department or directly employee": "Zaduži odjeljenje ili osobu",
+  "Succesfully saved an employee" : "Zaposlenik je uspješno spremljen"
 }
