--- a/src/translations/hr.json
+++ b/src/translations/hr.json
@@ -217,7 +217,7 @@
     "Budget": "Budžet (početni troškovi)",
     "Expenses": "Troškovi",
     "Difference": "Razlika",
-    "Difference in Precentage": "Razlika u postotku",
+    "Difference in precentage": "Razlika u postotku",
     "Item": "Naziv",
     "Expense Total": "Ukupni trošak",
     "Cost Approval": "Autorizacija troška",
@@ -326,11 +326,11 @@
     "Minutes": "Minuta",
     "Assign to": "Zadužena osoba",
     "Accept": "Prihvaćam",
-    "Reject": "Odbijam",
+    "Reject": "Ne odobravam",
     "Deadline / Priority": "Rok / Razina prioriteta",
     "Proposition Creator": "Kreirao propoziciju",
     "Find employee": "Pronađi osobu",
-    "Cost Rejected": "Trošak odbijen",
+    "Cost Rejected": "Trošak odbijen. Pošalji ponovno.",
     "Cost Approved": "Trošak odobren",
     "Cost Approval Pending": "Trošak je na odobrenju",
     "Finished": "Dovršeno",
@@ -372,5 +372,18 @@
     "Formal title": "Titula",
     "Working in": "Trenutno zaposlenje",
     "Assign department or directly employee": "Zaduži odjeljenje ili osobu",
-  "Succesfully saved an employee" : "Zaposlenik je uspješno spremljen"
+    "Succesfully saved an employee" : "Zaposlenik je uspješno spremljen",
+    "Task Details": "Podaci o zadatku",
+    "Task Name": "Naziv zadatka",
+    "Option": "Opcija",
+    "Succesfully saved an employee": "Uspješno spremljeni podaci",
+    "Approve": "Odobravam",
+    "Proposition Approval request": "Zahtjev za odobrenje propozicije",
+    "Room": "Soba",
+    "Add New Employee": "Dodaj novog korisnika",
+    "untitled": "Bez imena",
+    "Approval Request": "Odobrenje",
+    "Production Expenses": "Produkcijski troškovi",
+    "Warning": "Upozorenje",
+    "No": "Ne"
 }
