NewAuthor, ActivityStream blades, modal buttons reorder fix

--- a/src/translations/hr.json
+++ b/src/translations/hr.json
@@ -36,6 +36,7 @@
         "weekdaysFull": ["Nedjelja", "Ponedjeljak", "Utorak", "Srijeda", "Četvrtak", "Petak", "Subota"],
         "weekdaysShort": ["Ned", "Pon", "Uto", "Sri", "Čet", "Pet", "Sub"],
         "today": "Danas",
+        "Today": "Danas",
         "clear": "Očisti",
         "close": "Zatvori",
         "labelMonthNext": "Sljedeći mjesec",
@@ -382,12 +383,19 @@
     "Room": "Soba",
     "Add New Employee": "Dodaj novog korisnika",
     "untitled": "Bez imena",
-    "Approval Request": "Odobrenje",
     "Production Expenses": "Produkcijski troškovi",
     "Warning": "Upozorenje",
     "No": "Ne",
     "Data not saved, do you want to continue?": "Podaci nisu spremljeni, želite li ipak nastaviti?",
     "Add": "Dodaj",
     "has requested an proposition approval": "je zatražio/la odobrenje",
-    "Send": "Pošalji"
+    "Send": "Pošalji",
+    "User assigned you new task": "Korisnik vam je dodijelio zadatak",
+    "Approval Request": "Zahtijev za odobrenje",
+    "Project": "Projekt",
+    "a few seconds ago": "Prije nekoliko trenutaka",
+    "an hour ago": "Prije sat vremena",
+    "Proposition Approval": "Odobrenje propozicije",
+    "Activity Stream": "Obavijesti",
+    "Older Activity": "Starije obavijesti"
 }
