Department task list blade - for overall department tasks overview

--- a/src/translations/hr.json
+++ b/src/translations/hr.json
@@ -397,5 +397,6 @@
     "an hour ago": "Prije sat vremena",
     "Proposition Approval": "Odobrenje propozicije",
     "Activity Stream": "Obavijesti",
-    "Older Activity": "Starije obavijesti"
+    "Older Activity": "Starije obavijesti",
+    "Save tasks priority": "Spremi prioritete zadataka"
 }
