--- a/src/translations/hr.json
+++ b/src/translations/hr.json
@@ -126,7 +126,7 @@
   "Cover": "Naslovnica",
   "First Revision": "Prva revizija",
   "Correction": "Korektura",
-  "Correction input": "Unos korekture",
+  "Correction Input": "Unos korekture",
   "Revisions": "Revizije",
   "Final Price": "Konačna cijena",
   "Price Definition": "Određivanje cijene",
@@ -398,6 +398,8 @@
   "M": "M",
   "F": "Ž",
   "Image": "Fotografija",
+  "Restore": "Aktiviraj propoziciju",
+  "Exact Price": "Stvarna cijena",
   "Enter basic information about new Author": "Unesite osnovne informacije o autoru",
   "Occupation": "Profesija",
   "Add Additional Information": "Unesi dodatne informacije",
