Print offers - documnet upload; style fix

--- a/src/translations/hr.json
+++ b/src/translations/hr.json
@@ -459,5 +459,7 @@
   "Graphics": "Grafički odjel",
   "Editorial": "Urednički odjel",
   "Management": "Uprava",
-  "Design": "Dizajn odjel"
+  "Design": "Dizajn odjel",
+  "Upload Document": "Unesi datoteku",
+  "No print offers created": "Unesite naklade u koraku ranije da biste vidjeli print ponude"
 }
